# OpenGL_Learn

./: .gitignore  CMakeLists.txt  README.MD  ShaderUtils.h  Shaders.h  main.cpp
common/: AutoRelease.h  Common.cpp  Common.h  GLFWWrapper.h  Shader.cpp  Shader.h  ShaderUtils.h
glsllearn-1/: main.cpp
glsllearn-1/res/: fragment_shader.glsl
glsllearn-2/: main.cpp
glsllearn-2/res/: fragment_shader.glsl  vertex_shader.glsl  vertex_shader_use_input.glsl
hellotriangle/: main.cpp
hellotriangle/res/: vertex_shader.glsl
includes/GLFW/: glfw3.h
includes/glad/: glad.h
includes/glad/KHR/: khrplatform.h
includes/stbImage/: stb_image.h
learncoords/: main.cpp
learncoords/res/: vertex_shader.glsl
learntexture/: main.cpp
learntexture/res/: fragment_shader.glsl
libs/glad/: glad.c
libs/stbImage/: stb_image.c
shaders/: fragment_shader_yellow.glsl
